--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="./images/img.jpg" alt="Picture of Aquila" width="150" height="400">
+                    <img class="d-block w-100" src="./images/aquila-1.jpg" alt="Picture of Aquila" width="150" height="400">
                     <div class="caption">
                       <h2>Cute Aquila</h2>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./images/img-2.jpg" alt="Aquila as a puppy" width="150" height="400">
+                    <img class="d-block w-100" src="./images/aquila-2.jpg" alt="Aquila as a puppy" width="150" height="400">
                     <div class="caption">
                       <h2>My dog as a Puppy</h2>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./images/img-3.jpg" alt="Aquila being obedient for a treat" width="150" height="400"> 
+                    <img class="d-block w-100" src="./images/aquila-3.jpg" alt="Aquila being obedient for a treat" width="150" height="400"> 
                     <div class="caption">
                       <h2>Focused for a Treat</h2>
                     </div>
@@ -52,7 +52,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./images/img-5.jpg" alt="Aquila taking a picture with my on my birthday" width="150" height="400">
+                    <img class="d-block w-100" src="./images/aquila-5.jpg" alt="Aquila taking a picture with my on my birthday" width="150" height="400">
                     <div class="caption">
                       <h2>Birthday Picture with My Dog</h2>
                     </div>
