changed name on the first image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="./images/aquila-1.jpg" alt="Picture of Aquila" width="150" height="400">
+                    <img class="d-block w-100" src="./images/aquila.jpg" alt="Picture of Aquila" width="150" height="400">
                     <div class="caption">
                       <h2>Cute Aquila</h2>
                     </div>
